--- a/rpc-core/pom.xml
+++ b/rpc-core/pom.xml
@@ -68,5 +68,11 @@
       <version>4.13.2</version>
       <scope>compile</scope>
     </dependency>
+    <!-- https://github.com/rholder/guava-retrying -->
+    <dependency>
+      <groupId>com.github.rholder</groupId>
+      <artifactId>guava-retrying</artifactId>
+      <version>2.0.0</version>
+    </dependency>
   </dependencies>
 </project>
